--- a/deno.json
+++ b/deno.json
@@ -10,6 +10,6 @@
         "react-app/build/",
         "deps.ts"
     ],
-    "nodeModulesDir": "auto",
+    "nodeModulesDir": true,
     "importMap": "./import_map.json"
 }
