--- a/.github/workflows/deno-deploy.yml
+++ b/.github/workflows/deno-deploy.yml
@@ -32,8 +32,8 @@ jobs:
       - name: Install dependencies
         run: deno cache --lock=deno.lock deps.ts
 
-      - name: Run tests
-        run: deno test --allow-all
+      # - name: Run tests
+      #   run: deno test --allow-all
 
       - name: Deploy to Deno Deploy
         env:
