--- a/deno.json
+++ b/deno.json
@@ -1,15 +1,15 @@
 {
-    "tasks": {
-        "start": "deno run --allow-net --allow-read --allow-write --allow-env --watch server.ts",
-        "lint": "deno lint",
-        "fmt": "deno fmt"
-    },
-    "watch": [
-        "server.ts",
-        "routes/",
-        "react-app/build/",
-        "deps.ts"
-    ],
-    "nodeModulesDir": "auto",
-    "importMap": "./import_map.json"
+  "tasks": {
+    "start": "deno run --allow-net --allow-read --allow-write --allow-env --watch --unstable-kv server.ts",
+    "lint": "deno lint",
+    "fmt": "deno fmt"
+  },
+  "watch": [
+    "server.ts",
+    "routes/",
+    "react-app/build/",
+    "deps.ts"
+  ],
+  "nodeModulesDir": "auto",
+  "importMap": "./import_map.json"
 }
