--- a/react-app/package.json
+++ b/react-app/package.json
@@ -8,6 +8,8 @@
     "@types/react-dom": "^18.0.0",
     "@types/react-router-dom": "^5.3.3",
     "autoprefixer": "^10.4.20",
+    "d3": "^7.9.0",
+    "d3-cloud": "^1.2.7",
     "lodash": "^4.17.21",
     "postcss": "^8.5.1",
     "react": "^18.0.0",
@@ -37,6 +39,8 @@
     ]
   },
   "devDependencies": {
+    "@types/d3": "^7.4.3",
+    "@types/d3-cloud": "^1.2.9",
     "@types/lodash": "^4.14.168",
     "tailwindcss": "^3.4.17"
   }
